RESOLVED FIXED112700
[GTK] Fix WebKit2 builds after r146193
https://bugs.webkit.org/show_bug.cgi?id=112700
Summary [GTK] Fix WebKit2 builds after r146193
Zan Dobersek
Reported 2013-03-19 08:11:42 PDT
[GTK] Fix WebKit2 builds after r146193
Attachments
Patch (10.55 KB, patch)
2013-03-19 08:16 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2013-03-19 08:16:35 PDT
Zan Dobersek
Comment 2 2013-03-19 08:49:30 PDT
Comment on attachment 193834 [details] Patch Clearing flags on attachment: 193834 Committed r146207: <http://trac.webkit.org/changeset/146207>
Zan Dobersek
Comment 3 2013-03-19 08:49:38 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.